@@ -6,7 +6,8 @@
 ### Client
 1. Make sure you have JavaFX and MySQL's JDBC Connector installed and included in your classpath.
 2. Compile all classes in Views, class Main, and classes Client and Listener in Controller.
-3. Run class Main
+3. Run class Main with the following VM options: 
+`--module-path="C:\Program Files\Java\javafx-sdk-11.0.2\lib" --add-modules="javafx.base,javafx.controls,javafx.fxml,javafx.graphics" `
 
 ### Server
 1. Compile all classes in Controller except Client and Listener.
